cmake_minimum_required(VERSION 3.16)
#set(CMAKE_C_COMPILER /usr/bin/gcc-10)
project(PassMann C)
project(PassMann VERSION 1.0.1)
set(PROJECT_VERSION_MAJOR 1 CACHE STRING "major version" FORCE)
set(PROJECT_VERSION_MINOR 0 CACHE STRING "minor version" FORCE)
set(PROJECT_VERSION_PATCH 1 CACHE STRING "patch version" FORCE)
add_subdirectory(src)
set(CMAKE_C_STANDARD 99)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_BUILD_TYPE Debug)

function (RUN_DEB_BUILD)
install(TARGETS PassMann
        DESTINATION /usr/bin)

set(CPACK_GENERATOR "DEB")
set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Filip Ivanusec")

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "PassMann")
set(CPACK_PACKAGE_VENDOR "Filip Ivanusec")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "1")
set(CPACK_PACKAGE_CONTACT "Filip Ivanusec")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsodium-dev (>= 1.0.18)")
endfunction()

function (RUN_RPM_BUILD)
install(TARGETS PassMann
        DESTINATION /usr/bin)

set(CPACK_GENERATOR "RPM")
set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Filip Ivanusec")

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "PassMann")
set(CPACK_PACKAGE_VENDOR "Filip Ivanusec")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "1")
set(CPACK_PACKAGE_CONTACT "Filip Ivanusec")
set(CPACK_RPM_PACKAGE_DEPENDS "libsodium-dev (>= 1.0.18)")
endfunction()

option(DEB_PACK "Sets debian package build" OFF)
option(RPM_pACK "Sets rpm package build" OFF)

if(DEB_PACK)
        message("Building debian package")
        RUN_DEB_BUILD()
elseif(RPM_PACK)
        message("RPM IS ON")
else(NOT DEB_PACK and NOT RPM_PACK)
        message(FATAL_ERROR "NOT SET")
endif()
message("Defaulting to debian build")
set(PROJECT_VERSION_MAJOR 1 CACHE STRING "major version" FORCE)
set(PROJECT_VERSION_MINOR 0 CACHE STRING "minor version" FORCE)
set(PROJECT_VERSION_PATCH 1 CACHE STRING "patch version" FORCE)

set(CMAKE_C_STANDARD 99)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_BUILD_TYPE Debug)

install(TARGETS PassMann
        DESTINATION /usr/bin)

set(CPACK_GENERATOR "DEB")
set(CPACK_SOURCE_GENERATOR TGZ)
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Filip Ivanusec")

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "PassMann")
set(CPACK_PACKAGE_VENDOR "Filip Ivanusec")
set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "1")
set(CPACK_PACKAGE_CONTACT "Filip Ivanusec")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsodium-dev (>= 1.0.18)")
include(CPack)